Fixed news header position and photo z-index

--- a/styles/components/_members.scss
+++ b/styles/components/_members.scss
@@ -6,9 +6,9 @@
   font-size: 1.2rem;
 
   @media only screen and (max-width: $s-screen) {
-    background-color: black;
+    // background-color: black;
     margin-top: 0;
-    color: white;
+    // color: white;
     padding-top: 3rem;
   }
 
@@ -22,6 +22,10 @@
       margin-top: 3rem;
       margin-bottom: 5rem;
     }
+
+    @media only screen and (max-width: $xs-screen) {
+      font-size: 3rem;
+    }
   }
 
   &__image {
@@ -30,6 +34,7 @@
     position: absolute;
     top: -2rem;
     left: -7rem;
+    z-index: 2;
 
     &--container {
       margin-right: 1rem;
@@ -69,7 +74,7 @@
 
     @media only screen and (max-width: $xs-screen) {
       width: 30rem;
-      overflow: scroll;
+      height: auto;
     }
 
     & > div > span {
@@ -159,9 +164,14 @@
 
 .particles {
   position: absolute;
+  z-index: 1;
   width: 100%;
   height: 70rem;
   @media only screen and (max-width: $s-screen) {
     height: 130rem;
+  }
+
+  @media only screen and (max-width: $xs-screen) {
+    height: 150rem;
   }
 }
